# experiment_matsuzawa_251002

./: pyproject.toml
.github/workflows/: compile_latex_with_open_code.yml  run_experiment_with_claude_code.yml
.research/: research_history.json
.research/iteration1/: output.txt
.research/iteration1/asha-baseline/: run_config.yaml
.research/iteration1/asha-ohgw-1step/: run_config.yaml
.research/iteration1/asha-ohgw-3step/: run_config.yaml
.research/iteration1/asha-random-warm/: run_config.yaml
.research/iteration3/: error.txt  output.txt
.research/iteration3/asha-baseline/: config.yaml  results.json
.research/iteration3/asha-ohgw-1step/: config.yaml  results.json
.research/iteration3/asha-ohgw-3step/: config.yaml  results.json
.research/iteration3/asha-random-warm/: config.yaml  results.json
.research/iteration3/pasha-baseline/: config.yaml
.research/latex/agents4science_2025/: paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
.research/latex/iclr2024/: paper.aux  paper.bbl  paper.blg  paper.out  paper.tex
.research/prompt/analytic_subgraph/: analytic_node.txt
.research/prompt/create_bibfile_subgraph/: filter_references.txt
.research/prompt/create_code_subgraph/: derive_specific_experiments_exp-1.txt  derive_specific_experiments_exp-2.txt  generate_base_code.txt  validate_base_code.txt  validate_experiment_code_exp-1.txt  validate_experiment_code_exp-2.txt
config/: full_experiment.yaml  smoke_test.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+111 files in other folders)
