[project]
name = "ohgw-common-core"
version = "0.1.0"
description = "Common core foundation for OHGW experimental suite"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pyyaml>=6.0",
    "numpy>=1.23",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "transformers>=4.35",
    "datasets>=2.14",
    "sentencepiece>=0.1.99",
]

[build-system]
requires = ["setuptools", "wheel"]
